--- a/main.css
+++ b/main.css
@@ -28,11 +28,19 @@ body {
     font-family: Pacifico, cursive;
 }
 
-.section-title span {
-    color: #e15f41;
-
-}
-
 #sobre-o-restaurante {
     background-color: #ffeae6;
+    
+}
+
+.text-colored {
+    color: #e15f41;
+}
+#carousel img{
+    height: 400px;
+    width: 100%;
+}
+
+.mar-separar{
+    margin-top: 80px;
 }
