--- a/main.css
+++ b/main.css
@@ -7,14 +7,15 @@ body {
     
 }
 
-.nav .nav-link.active {
+#cabecalho .nav .nav-link.active {
     background-color: #fff;
     color: #e15f41;
 }
 
-.nav .nav-link,
+#cabecalho .nav .nav-link,
 .navbar-brand,
-.navbar-brand:hover {
+.navbar-brand:hover,
+.nav-cardapio .nav-link:hover {
     color: #fff;
 }
 
@@ -28,7 +29,7 @@ body {
     font-family: Pacifico, cursive;
 }
 
-#sobre-o-restaurante {
+#sobre-o-restaurante, #cardapio {
     background-color: #ffeae6;
     
 }
@@ -36,6 +37,16 @@ body {
 .text-colored {
     color: #e15f41;
 }
+
+.nav-cardapio .nav-link.active {
+    background-color: #e15f41;
+    color: #fff;
+}
+
+.nav-cardapio .nav-link:hover {
+    color: #e15f41;
+}
+
 #carousel img{
     height: 400px;
     width: 100%;
