--- a/main.css
+++ b/main.css
@@ -4,12 +4,16 @@ body {
 
 .navbar {
     background-color: #e15f41;
-    
+
 }
 
 #cabecalho .nav .nav-link.active {
     background-color: #fff;
     color: #e15f41;
+}
+
+#sobre-o-restaurante{
+    height: 850px;
 }
 
 #cabecalho .nav .nav-link,
@@ -18,8 +22,6 @@ body {
 .nav-cardapio .nav-link:hover {
     color: #fff;
 }
-
-
 
 .navbar-toggler {
     background-color: #ffeae6;
@@ -41,17 +43,90 @@ body {
 .nav-cardapio .nav-link.active {
     background-color: #e15f41;
     color: #fff;
+    transition: 1s;
 }
 
 .nav-cardapio .nav-link:hover {
     color: #e15f41;
 }
 
-#carousel img{
+#carousel img {
     height: 400px;
     width: 100%;
 }
 
 .mar-separar{
     margin-top: 80px;
+}
+
+#cardapio{
+    height: 400px;
+}
+
+#cardapio .nav .nav-link.active {
+    background-color: #fff;
+    color: #e15f41;
+}
+
+#cardapio .nav .nav-link,
+.navbar-brand,
+.navbar-brand:hover,
+.nav-cardapio .nav-link:hover {
+    color: rgb(44, 35, 35);
+}
+
+#cardapio .nav-cardapio .nav-link:hover{
+    background-color: #fff;
+    color: #e15f41;
+    transition: 0.8s;
+    
+} 
+
+.disp {
+    width: 200px;
+    height: 200px;
+    display: inline-block;
+    margin: 20px;
+}
+.ca-Espacar{
+    padding-bottom: 50px;
+}
+
+
+.faleConosco {
+    display: flow-root;
+    width: 400px;
+    border-radius: 10px;
+    margin-top: 40px;
+
+}
+
+ .rodape {
+    background-color: #e15f41;
+    width: 100%;
+    height: 70px;
+    color: #fff;
+    font-size: 14px;
+    margin-top: 40px;
+    padding-top: 20px;
+}
+
+.endereco {
+    margin: 10px 50px;
+}
+
+#bebidasAlcoolicas {
+    display: none;
+}
+
+#entrada {
+    display: none;
+}
+
+#pratos {
+    display: none;
+}
+
+#sobremesas {
+    display: none;
 }
